kubernetes-security/osquery-kubequery/osquery-install-daemonset/network-policys.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: osquery
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-egress
  namespace: osquery
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress: []
